Implemented loading + resizing

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   </head>
   <body>
     <div id="info"></div>
+    <div id="copy">Naushikha Jayawickrama</div>
+    <div id="progress"><div id="progress-bar">Loading...</div></div>
     <script src="js/three.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/main.js"></script>
