Added zoom animation (cinematic effect)

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <script src="js/OBJLoader.js"></script>
     <script src="js/MTLLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
+    <script src="js/tween.umd.js"></script>
     <script src="js/main.js"></script>
     <script></script>
   </body>
